# synthesizer

./: .gitignore  .pre-commit-config.yaml  API.html  README.md  conftest.py  genindex.html  get_shifted_spectra_test.c  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  sg_execution_times.html
.github/workflows/: publish_docs.yml  python-app.yml
_autosummary/: synthesizer.abundances.abundance_patterns.html  synthesizer.abundances.abundance_scalings.html  synthesizer.abundances.depletion_models.html  synthesizer.abundances.elements.html  synthesizer.abundances.html  synthesizer.abundances.reference_abundance_patterns.html  synthesizer.ascii_table.html  synthesizer.base_galaxy.html  synthesizer.components.blackhole.html  synthesizer.components.component.html  synthesizer.components.html  synthesizer.components.stellar.html  synthesizer.conversions.html  synthesizer.download_data.html  synthesizer.emission_models.agn.html  synthesizer.emission_models.agn.models.html  synthesizer.emission_models.agn.unified_agn.html  synthesizer.emission_models.attenuation.dust.html  synthesizer.emission_models.attenuation.html  synthesizer.emission_models.attenuation.igm.html  synthesizer.emission_models.base_model.html  synthesizer.emission_models.dust.emission.html  synthesizer.emission_models.dust.html  synthesizer.emission_models.html  synthesizer.emission_models.models.html  synthesizer.emission_models.operations.html  synthesizer.emission_models.stellar.html  synthesizer.emission_models.stellar.models.html  synthesizer.emission_models.stellar.pacman_model.html  synthesizer.exceptions.DownloadError.html  synthesizer.exceptions.GridError.html  synthesizer.exceptions.InconsistentAddition.html  synthesizer.exceptions.InconsistentArguments.html  synthesizer.exceptions.InconsistentCoordinates.html  synthesizer.exceptions.InconsistentParameter.html  synthesizer.exceptions.InconsistentWavelengths.html  synthesizer.exceptions.IncorrectUnits.html  synthesizer.exceptions.MissingArgument.html  synthesizer.exceptions.MissingAttribute.html  synthesizer.exceptions.MissingImage.html  (+72 more)
_downloads/00e724db703580ad18ec45b87c9ddb1e/: plot_spectra.ipynb
_downloads/18ab39b4323f2e44fc619694e3be864d/: plot_morphology.py
_downloads/1d60be4f3c8caede2f10ddfbbdb4366d/: plot_compare_parametric_particle.ipynb
_downloads/22b4512f98238e2969ee3e0fc701eeef/: plot_morphology.ipynb
_downloads/358893fdce9c1d33453564d26eb3f56e/: plot_compare_grid_assignment.py
_downloads/36573c491c3852bb66327537da70ac3d/: plot_dense_basis.py
_downloads/544c6e2c1ab2ae410a0d9de8bb55f238/: plot_los_spectra.py
_downloads/55829db956316681b8770a19f9f1c158/: plot_los_spectra.ipynb
_downloads/590baac89e80402db965fbd2ee909b47/: plot_get_los_attenutation.py
_downloads/6c14165308b7095676deb1b4468c6172/: plot_cosmo_example.ipynb
_downloads/793d7f45ff686be746031fe53ae05caa/: plot_create_sampled_sed.py
_downloads/7dbaa1ffcd9032cd9eae52cbc66450f5/: plot_parametric_young_stars.ipynb
_downloads/8c4067add0b3ac0edb2727bcb0755316/: plot_spectra.py
_downloads/bf94a082148b6c2a32b8c6e806c26058/: plot_compare_grid_assignment.ipynb
_downloads/c3ebd571164e8321a132ec58333f01fd/: plot_compare_parametric_particle.py
_downloads/c773f8834cea235c5024579d12025410/: plot_dense_basis.ipynb
_downloads/e68787cb28bedbfa9b2cf641dfb3279f/: plot_get_los_attenutation.ipynb
_modules/: index.html
_modules/synthesizer/: base_galaxy.html  conversions.html  grid.html  (+9 more)
_sources/: sg_execution_times.rst.txt
_static/: documentation_options.js
advanced/: abundances.html  abundances.ipynb  advanced.html  config_options.html  creating_grids.html  units.html  units.ipynb
attenuation/: attenuation.html  dust_attenuation.html  dust_attenuation.ipynb  igm.html  igm.ipynb
auto_examples/: index.html  sg_execution_times.html
components/: blackholes.html  blackholes.ipynb  components.html  gas.html  gas.ipynb  stars.html  stars.ipynb
emission_models/: combined_models.html  combined_models.ipynb  custom_models.html  custom_models.ipynb  dust_emission.html  dust_emission.ipynb  emission_models.html  model_usage.html  model_usage.ipynb  modify_models.html  modify_models.ipynb
filters/: filters.html  filters_example.html  filters_example.ipynb
galaxy/: galaxy.html  line_of_sight.html  line_of_sight.ipynb  particle_parametric.html  particle_parametric.ipynb
generate_grids/: create_test_grid.sh  rebin_grid.py
getting_started/: downloading_grids.html  getting_started.html  installation.html  overview.html
grids/: grids.html  grids_example.html  grids_example.ipynb
imaging/: imaging.html  parametric_data_cube.html  parametric_data_cube.ipynb  parametric_imaging.html  parametric_imaging.ipynb  particle_data_cube.html  particle_data_cube.ipynb  particle_imaging.html  particle_imaging.ipynb  property_maps.html  property_maps.ipynb
instrumentation/: instrument_example.html  instrument_example.ipynb  instruments.html
lines/: galaxy_lines.html  galaxy_lines.ipynb  grid_lines.html  grid_lines.ipynb  lines.html
notebook_examples/: cookbook.html  generate_active_galaxy.html  generate_active_galaxy.ipynb  generate_composite_galaxy.html  generate_composite_galaxy.ipynb
parallelism/: openmp.html
photometry/: galaxy_phot.html  galaxy_phot.ipynb  photometry.html  photometry_example.html  photometry_example.ipynb
pipelines/: pipeline_example.html  pipeline_example.ipynb
profiling/: compare_los_loop_tree.py  image_strong_scaling.py  int_spectra_strong_scaling.py  los_surf_strong_scaling.py  part_spectra_strong_scaling.py  profile_mem_int_spectra.py  profile_mem_part_spectra.py  profile_plot.py  profile_time_int_spectra.py  profile_time_part_spectra.py  spectral_cube_strong_scaling.py
sed/: sed.html  sed_example.html  sed_example.ipynb
spectra/: blackholes.html  blackholes.ipynb  galaxy.html  galaxy.ipynb  spectra.html  stars.html  stars.ipynb
synthesizer/: base_galaxy.py  cloudy.py  grid.py  sed.py  stats.py  units.py
tests/: get_test_grid.sh  test_grid.py  test_igm.py  test_particle_stars.py  test_sed.py
(+422 files in other folders)
